# shader-opengl

./: CMakeLists.txt  README.md  compile.sh
.cache/clangd/index/: Arch.cpp.1F9CB06ECB728520.idx  Arch.h.DE631F3DF4F6C354.idx  Renderable.h.D4849E7816A47F69.idx  Shader.cpp.C405FF2EE15089F9.idx  Shader.h.28C6973D1A92FD30.idx  Window.cpp.3FFB5F599C8F4873.idx  Window.h.139A5545A18AD12F.idx  glad.c.354518663AB45F3C.idx  glad.h.19141523CE760B8B.idx  khrplatform.h.A24F4D0DBA95614C.idx  main.cpp.89A91C9508CE9570.idx
include/eunoia/: Arch.cpp  Arch.h  Renderable.h  Shader.cpp  Shader.h  Window.cpp  Window.h
include/glad/: glad.h
shaders/: fragment.glsl
src/: glad.c  main.cpp
